--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 streamlit
 firebase-admin
 pyrebase4
@@ -7,3 +6,4 @@ Pillow
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+setuptools
